<resources>
    <string name="app_name">ChatApp</string>
    <string name="Send">Send Message</string>
    <string name="email">Email …</string>
    <string name="password">Password …</string>
    <string name="login">Login</string>
    <string name="intro">Enter/Paste Unique ID to chat!</string>
    <string name="start_chat">Start Chat!</string>
    <string name="logout">Logout</string>
    <string name="mail_hint">XXXXXXX</string>
    <string name="intro_user">You are logged in as </string>
    <string name="send_msg">Send</string>
    <string name="copy_id">Copy ID</string>
    <string name="signup">Create Account</string>
    <string name="get_in">Get In!</string>
    <string name="email_address">Email Address …</string>
    <string name="new_password">New Password …</string>
    <string name="retype_password">Retype Password …</string>
    <string name="say_hello_to_your_friend">Say Hello to your friend!</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_address_1">Email Address</string>
    <string name="display_name">Display Name</string>
</resources>
